@@ -30,6 +30,7 @@
 * Python Property object now consider int data type always as a 64 bit value
 * Fixed a bug rendering black baked maps when using bump mapping and COMBINED type with BAKECPU rendering engine
 * Fixed a bug when rendering caustics over volumes with Caustic cache (issue #533)
+* Fixed a problem causing the initialization of multiple dataset accelerators in some case
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
